Project smart_workspace {
  database_type: "PostgreSQL"
}

Table users {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  email varchar(255) [not null, unique]
  phone varchar(20) [null, unique]
  password_hash varchar(255) [not null]

  online_status boolean [default: false]

  created_at timestamptz
  updated_at timestamptz

  indexes {
    email | phone
  }
}

Table user_profiles {
  // @OneToOne
  user_id uuid [pk, ref: - users.id]

  first_name varchar(100) [not null]
  last_name varchar(100) [null]

  avatar_url varchar(1024) [null]
  bio text [null]

  discord_id varchar(50) [unique, null]

  created_at timestamptz
  updated_at timestamptz
}

Table workspaces {
  id uuid [pk]

  name varchar(255) [not null, unique]
  slug varchar(255) [not null, unique]
  description text

  // @ManyToOne
  // WorkspaceEntity.owner
  owner_id uuid [not null, ref: - users.id]

  created_at timestamptz
  updated_at timestamptz
}

Table workspace_members {
  id uuid [pk]

  // @ManyToOne
  // WorkspaceMemberEntity.workspace
  // field keeps foreign key so using @JoinColumn(name = "workspace_id")
  workspace_id uuid [not null, ref: > workspaces.id]

  // @ManyToOne
  // WorkspaceMemberEntity.user
  // field keeps foreign key so using @JoinColumn(name = "user_id")
  user_id uuid [not null, ref: > users.id]

  joined_at timestamptz

  indexes {
    (workspace_id, user_id) [unique]
  }
}

Table roles {
  id uuid [pk]

  // @ManyToOne
  workspace_id uuid [not null, ref: > workspaces.id]
  // Field does not keep the foreign key uses with @MappedBy('workspace_id')
  // Field keeps foreign key so using @JoinColumn(name = "workspace_id")

  name varchar(100) [not null]

  created_at timestamptz
  updated_at timestamptz

  indexes {
    (workspace_id, name) [unique]
  }
}

Table permissions {
  id uuid [pk]

  code varchar(100) [not null, unique]
}

Table role_permissions { // Join table for many-to-many relationship between roles and permissions

  role_id uuid [not null, ref: > roles.id]
  // Field does not keep the foreign key uses with @MappedBy('role_id')

  permission_id uuid [not null, ref: > permissions.id]
  // Field does not keep the foreign key uses with @MappedBy('permission_id')

  indexes {
    (role_id, permission_id) [pk]
  }
}

Table workspace_member_roles { // Join table for many-to-many relationship between workspace_members and roles

  // @ManyToOne
  workspace_member_id uuid [not null, ref: > workspace_members.id]
  // Field does not keep the foreign key uses with @MappedBy('workspace_member_id')

  // @ManyToOne
  role_id uuid [not null, ref: > roles.id] // Foreign key to roles
  // Field does not keep the foreign key uses with @MappedBy('role_id')

  indexes {
    (workspace_member_id, role_id) [pk]
  }
}

Table teams {
  id uuid [pk]

  // @ManyToOne
  workspace_id uuid [not null, ref: > workspaces.id]
  // Field does not keep the foreign key uses with @MappedBy('workspace_id')

  name varchar(255) [not null]

  created_at timestamptz
  updated_at timestamptz

  indexes {
    (workspace_id, name) [unique]
  }
}

Table team_members {
  id uuid [pk]

  // @ManyToOne
  team_id uuid [not null, ref: > teams.id]
  // Field does not keep the foreign key uses with @MappedBy('team_id')

  // @ManyToOne
  workspace_member_id uuid [not null, ref: > workspace_members.id]
  // Field does not keep the foreign key uses with @MappedBy('workspace_member_id')

  joined_at timestamptz

  indexes {
    (team_id, workspace_member_id) [unique]
  }
}

Table workspace_meeting_schedules {
  id uuid [pk]

  // @ManyToOne
  workspace_id uuid [not null, ref: > workspaces.id]
  // Field does not keep the foreign key uses with @MappedBy('workspace_id')

  title varchar(255) [not null]

  start_time timestamptz [not null]
  end_time timestamptz [not null]

  created_at timestamptz
  updated_at timestamptz

  indexes {
    (workspace_id, title) [unique]
  }
}

Table workspace_member_warnings {
  id uuid [pk]

  // @ManyToOne
  workspace_member_id uuid [not null, ref: > workspace_members.id]
  // Field does not keep the foreign key uses with @MappedBy('workspace_member_id')

  warning_type varchar(100) [not null]
  description text

  created_at timestamptz
  updated_at timestamptz

  indexes {
    (workspace_member_id, warning_type)
  }
}

Table assignments {
  id uuid [pk]

  // @ManyToOne
  workspace_id uuid [not null, ref: > workspaces.id]
  // Field does not keep the foreign key uses with @MappedBy('workspace_id')

  title varchar(255) [not null]

  description text

  deadline timestamptz [not null]

  created_by uuid [not null, ref: > workspace_members.id]

  created_at timestamptz
  updated_at timestamptz

  indexes {
    (workspace_id, title) [unique]
  }
}

Table assignment_assignees {
  id uuid [pk]

  // @ManyToOne
  assignment_id uuid [not null, ref: > assignments.id]
  // Field does not keep the foreign key uses with @MappedBy('assignment_id')

  // @ManyToOne
  workspace_member_id uuid [not null, ref: > workspace_members.id]
  // Field does not keep the foreign key uses with @MappedBy('workspace_member_id')

  assigned_at timestamptz

  indexes {
    (assignment_id, workspace_member_id) [unique]
  }
}

Table assignment_submissions {
  id uuid [pk]

  // @ManyToOne
  assignment_assignee_id uuid [not null, ref: > assignment_assignees.id]
  // Field does not keep the foreign key uses with @MappedBy('assignment_assignee_id')

  submission_url varchar(1024) [not null]
  submitted_at timestamptz

  created_at timestamptz
  updated_at timestamptz

  indexes {
    (assignment_assignee_id)
  }
}

Table workspace_member_letters {
  id uuid [pk]

  // @ManyToOne
  workspace_member_id uuid [not null, ref: > workspace_members.id]
  // Field does not keep the foreign key uses with @MappedBy('workspace_member_id')

  letter_type varchar(100) [not null]
  description text

  status varchar(50) [not null, default: 'pending']
  // pending, approved, rejected

  created_at timestamptz
  updated_at timestamptz

  indexes {
    (workspace_member_id, letter_type)
  }
}

Table workspace_member_absence_letters {
  // @OneToOne
  letter_id uuid [pk, ref: - workspace_member_letters.id]
  // Field does not keep the foreign key uses with @MappedBy('letter_id')

  workspace_meeting_schedule_id uuid [not null, ref: > workspace_meeting_schedules.id]

  absence_date date [not null]

  indexes {
    (workspace_meeting_schedule_id, absence_date)
  }
}

Table workspace_member_late_letters {
  // @OneToOne
  letter_id uuid [pk, ref: - workspace_member_letters.id]
  // Field does not keep the foreign key uses with @MappedBy('letter_id')

  workspace_meeting_schedule_id uuid [not null, ref: > workspace_meeting_schedules.id]

  late_date date [not null]
  expected_arrival_time timestamptz [not null]

  indexes {
    (workspace_meeting_schedule_id, late_date)
  }
}

Table workspace_member_assignment_postpone_letters {
  // @OneToOne
  letter_id uuid [pk, ref: - workspace_member_letters.id]
  // Field does not keep the foreign key uses with @MappedBy('letter_id')

  // @ManyToOne
  assignment_id uuid [not null, ref: > assignments.id]
  // Field does not keep the foreign key uses with @MappedBy('assignment_id')

  assignment_snapshot varchar(255)

  old_deadline timestamptz [not null]
  requested_deadline timestamptz [not null]

  indexes {
    (assignment_id, old_deadline, requested_deadline)
  }
}

Table refresh_tokens {
  id uuid [pk]

  // @ManyToOne
  user_id uuid [not null, ref: > users.id]
  // Field does not keep the foreign key uses with @MappedBy('user_id')

  token varchar(255) [not null, unique]
  expires_at timestamptz [not null]
  revoked_at timestamptz

  created_at timestamptz
  updated_at timestamptz
}

// note: mappedBy = "user" in UserEntity shows this relationship is managed by field "user" in UserProfileEntity
